Improve Ratio and ART